WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259031
[GStreamer][GL] Missing support for P010 video format
https://bugs.webkit.org/show_bug.cgi?id=259031
Summary
[GStreamer][GL] Missing support for P010 video format
Philippe Normand
Reported
2023-07-09 04:04:13 PDT
Playing
https://developer.apple.com/videos/play/wwdc2021/10033/
on capable Intel GPU with vah265dec should not stutter... I have some initial WIP, but it doesn't render well because we still use 8 bits per component instead of 10. For now I use the same shader as for NV12 :)
https://github.com/philn/WebKit/commits/wip/p010
https://learn.microsoft.com/en-gb/windows/win32/medfound/10-bit-and-16-bit-yuv-video-formats?redirectedfrom=MSDN#_420formats
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-07-09 10:05:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15676
EWS
Comment 2
2023-07-10 01:43:44 PDT
Committed
265896@main
(ff57fb336bb5): <
https://commits.webkit.org/265896@main
> Reviewed commits have been landed. Closing PR #15676 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-10 01:44:17 PDT
<
rdar://problem/112004335
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug