[GStreamer][GL] Missing support for P010 video format https://bugs.webkit.org/show_bug.cgi?id=259031

Reviewed by Žan Doberšek.

The DMABuf sink can now negotiate P010 and P016 formats with upstream video decoders, such as
vah265dec. This makes hevc playback smooth on capable Intel GPUs at least.

* Source/WebCore/platform/graphics/gbm/DMABufFormat.h:
(WebCore::DMABufFormat::Plane::Plane):
(WebCore::DMABufFormat::create<DMABufFormat::FourCC::P010>):
(WebCore::DMABufFormat::create<DMABufFormat::FourCC::P016>):
(WebCore::DMABufFormat::create):
* Source/WebCore/platform/graphics/gbm/GBMBufferSwapchain.cpp:
(WebCore::isBufferFormatSupported):
* Source/WebCore/platform/graphics/gstreamer/DMABufVideoSinkGStreamer.cpp:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::fourccValue):
* Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyDMABuf.cpp:
(WebCore::TextureMapperPlatformLayerProxyDMABuf::DMABufLayer::paintToTextureMapper):

Canonical link: https://commits.webkit.org/265896@main