Source/WebCore/platform/graphics/gbm/GBMBufferSwapchain.cpp
@@ -68,6 +68,8 @@ static inline bool isBufferFormatSupported(const DMABufFormat& format)
     case DMABufFormat::FourCC::Y444:
     case DMABufFormat::FourCC::Y41B:
     case DMABufFormat::FourCC::Y42B:
+    case DMABufFormat::FourCC::P010:
+    case DMABufFormat::FourCC::P016:
         return true;
     default:
         return false;
